Adding documentation for text summarization example

--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -1,20 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "27865390-6175-4748-b877-8b9e8a6ebd6f",
+   "metadata": {},
+   "source": [
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "828785b7-7b94-41cb-99e4-097312876118",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"text-align: center;\">Performance Monitoring: Text Summarization</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9362701a-3cac-4a81-8eec-189603fc00e3",
+   "metadata": {},
+   "source": [
+    "**Overview**: In this example, we will see how to use UpTrain to monitor performance of a text summarization task in NLP. Summarization creates a shorter version of a document or an article that captures all the important information. For the same, we will be using a pretrained [text summarization model](https://huggingface.co/t5-small) (with T5 architecture) from [Huggingface](https://huggingface.co/docs/transformers/tasks/summarization). This model was trained on the [billsum dataset](https://huggingface.co/datasets/billsum).\n",
+    "\n",
+    "**Why is monitoring needed**: Monitoring NLP tasks with traditional metrics (such as accuracy) in production is hard, as groud truth is unavailable (or extremely delayed when there is a human in the loop). And, hence, it becomes very important to develop techniques to monitor real time monitoring for tasks such as text summarization before important business metrics (such as custumer satisfaction and revenue) are affected.\n",
+    "\n",
+    "**Problem**: In this example, the model was trained on the [billsum dataset](https://huggingface.co/datasets/billsum). This dataset contains the articles and their summarization of the US Congressional and California state bills. However, in production, we append some samples from the [wikihow dataset](https://github.com/mahnazkoupaee/WikiHow-Dataset). The WikiHow is a large-scale dataset using the online [WikiHow](http://www.wikihow.com/) knowledge base. As you can imagine, the two datasets are quite different. It would be interesting to see how the text summarization task performs in production 🤔\n",
+    "\n",
+    "**Solution**: We will be using UpTrain framework which provides an easy-to-configure way to log  training data, production data and model's predictions. We apply several techniques on theis logged data, such as clustering, data drift detection and customized signals, to monitor performance and raise alerts in case of any dip in model's performance 🚀"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcb847e5-4466-4996-a6d5-2ccb371e7a54",
+   "metadata": {},
+   "source": [
+    "### Install Required packages\n",
+    "- [PyTorch](https://pytorch.org/get-started/locally/): Deep learning framework.\n",
+    "- [Hugging Face Transformers](https://huggingface.co/docs/transformers/installation): To use pretrained state-of-the-art models.\n",
+    "- [Hugging Face Datasets](https://pypi.org/project/datasets/): Use public Hugging Face datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "eb821711-dfe5-4d29-b175-aab24dd29aa6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sourabhagrawal/miniconda3/envs/speech_to_text/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
@@ -32,7 +68,7 @@
    "id": "af26b680-b9dc-4445-a7ab-726f36768a45",
    "metadata": {},
    "source": [
-    "### Summarization Tasks"
+    "### Load Billsum dataset from Huggingface"
    ]
   },
   {
@@ -45,10 +81,71 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset billsum (/Users/sourabhagrawal/.cache/huggingface/datasets/billsum/default/3.0.0/75cf1719d38d6553aa0e0714c393c74579b083ae6e164b2543684e3e92e0c4cc)\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 19.20ba/s]\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 317.53ba/s]\n"
+      "Using custom data configuration default\n",
+      "Found cached dataset billsum (/Users/vipul/.cache/huggingface/datasets/billsum/default/3.0.0/75cf1719d38d6553aa0e0714c393c74579b083ae6e164b2543684e3e92e0c4cc)\n"
      ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.02113485336303711,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 24,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 1,
+       "unit": "ba",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d86659d8948747b38fddb053306fcbff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.011784076690673828,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 24,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 1,
+       "unit": "ba",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa5203563e92442790f0453212df52b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -78,6 +175,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4114d45-b745-4228-94e6-9f5174229cc9",
+   "metadata": {},
+   "source": [
+    "### Get and save BERT embeddings for the Billsum training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "eeba6860-e5ab-4e2d-9f22-f70723b158cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_dataset = billsum['train']\n",
+    "data = []\n",
+    "for jdx in range(10):\n",
+    "    this_batch = [prefix + doc for doc in ref_dataset[\"text\"] if doc is not None][jdx*100: (jdx+1)*100]\n",
+    "    input_embs = tokenizer_t5(this_batch, truncation=True, padding=True, return_tensors=\"pt\").input_ids\n",
+    "    output_embs = model_t5.generate(input_embs)\n",
+    "    summaries = tokenizer_t5.batch_decode(output_embs, skip_special_tokens=True)\n",
+    "    bert_embs = convert_sentence_to_emb(summaries)\n",
+    "    bert_embs_downsampled = downsample_embs(bert_embs)\n",
+    "    for idx in range(len(this_batch)):\n",
+    "        data.append({\n",
+    "            'id': jdx*100+idx,\n",
+    "            \"dataset_label\": \"billsum_train\",\n",
+    "            'title': ref_dataset[jdx*100+idx]['title'],\n",
+    "            'text': ref_dataset[jdx*100+idx]['text'],\n",
+    "            'model_output': summaries[idx],\n",
+    "            'bert_embs': bert_embs[idx].tolist(),\n",
+    "            'bert_embs_downsampled': bert_embs_downsampled[idx].tolist()\n",
+    "        })\n",
+    "\n",
+    "with open(\"ref_dataset.json\", \"w\") as f:\n",
+    "    json.dump(data, f, cls=uptrain.UpTrainEncoder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "57e8e4b8-46d2-4613-a21f-74f2489b2b4c",
    "metadata": {},
    "source": [
@@ -95,10 +231,46 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-5b0f6db04b5599d3\n",
-      "Found cached dataset csv (/Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-5b0f6db04b5599d3/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 18.91it/s]\n",
-      "Loading cached processed dataset at /Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-5b0f6db04b5599d3/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317/cache-b11015b26ad529da.arrow\n"
+      "Using custom data configuration default-284c260ed8a36aaa\n",
+      "Found cached dataset csv (/Users/vipul/.cache/huggingface/datasets/csv/default-284c260ed8a36aaa/0.0.0/652c3096f041ee27b04d2232d41f10547a8fecda3e284a79a0ec4053c916ef7a)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.025017738342285156,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 24,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 1,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "339b0d56fce4434cbdff81ca3af2cf35",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached processed dataset at /Users/vipul/.cache/huggingface/datasets/csv/default-284c260ed8a36aaa/0.0.0/652c3096f041ee27b04d2232d41f10547a8fecda3e284a79a0ec4053c916ef7a/cache-09b0b890dc34f8fe.arrow\n"
      ]
     },
     {
@@ -177,11 +349,35 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Flattening the indices: 100%|██████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 83.74ba/s]\n"
-     ]
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.010721206665039062,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 24,
+       "postfix": null,
+       "prefix": "Flattening the indices",
+       "rate": null,
+       "total": 1,
+       "unit": "ba",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9cf2ed312684a86aaf7b6b7c2a443f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Flattening the indices:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -238,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "2e1c95a7-c63e-4a7f-be87-a283fde77089",
    "metadata": {},
    "outputs": [],
@@ -277,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "1da3442a-79e1-4bad-b7ba-5e7a8c63eca8",
    "metadata": {},
    "outputs": [
@@ -288,35 +484,10 @@
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n",
       "0\n",
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8501\n",
-      "  Network URL: http://192.168.6.92:8501\n",
-      "\n",
-      "  For better performance, install the Watchdog module:\n",
-      "\n",
-      "  $ xcode-select --install\n",
-      "  $ pip install watchdog\n",
-      "            \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "10\n",
       "20\n",
       "30\n",
-      "40\n",
-      "  Stopping...\n"
+      "40\n"
      ]
     }
    ],
@@ -392,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
