--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -192,7 +192,7 @@
      "text": [
       "Using custom data configuration default-5b0f6db04b5599d3\n",
       "Found cached dataset csv (/Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-5b0f6db04b5599d3/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n",
-      "100%|██████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 25.16it/s]\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 22.00it/s]\n",
       "Loading cached processed dataset at /Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-5b0f6db04b5599d3/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317/cache-b11015b26ad529da.arrow\n"
      ]
     },
@@ -243,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Flattening the indices: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00, 58.30ba/s]\n"
+      "Flattening the indices: 100%|█████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 56.83ba/s]\n"
      ]
     },
     {
@@ -285,16 +285,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 116.05ba/s]"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 117.55ba/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'model_input_text_to_summarize': \";\\n, Base is another useful one that makes databases, but it is rather difficult to get it to work with MS Access.\\n\\n,, For Microsoft Office and Microsoft Works; Word uses .doc, Excel uses .xls and Powerpoint uses .ppt. Google Office uses Open Document Format. If you don't know, chances are rich text format (.rtf) will work on most word processor programs and comma separated values (.csv) format on most spreadsheet programs.\\n\\n, PDF is an open device-independent fixed-layout document format. Each PDF file encapsulates a complete description of a 2-D document that includes the text, fonts, images, and 2-D vector graphics that compose the document. So it will display correctly, regardless of what system software the recipient is using (Adobe Reader, Sumatra, Foxit etc.) or what fonts they have. PDF tends not to be editable.\\n\\n,\"} \n",
+      "{'model_input_text_to_summarize': \" Because the process of creating new roots causes stress to the cut stem, the existing foliage may rot or dry out. Remove any dried or rotten leaves, and remove any flowers that may form during the rooting process.\\n\\n, Keep the rooting medium moist at all times. Hand-mist the cuttings several times an hour for the first several days. If you can't hand-mist regularly, create a humid atmosphere around the cuttings with a plastic tent, such as a food storage bag. Be sure the tent does not touch the leaves or they may rot. Commercial propagation boxes also are available at most garden centers.\\n\\n, Keep the soil temperatures between 65 and 80 degrees F (18.3 and 26.7 degrees C).\\n\\n, The process of regeneration requires light for photosynthesis. However, direct sunlight will burn the fragile cuttings. Place the cuttings in a north-facing window or provide artificial lighting.\\n\\n\"} \n",
       "\n",
-      "{'model_output_summary': ['Microsoft Office and Microsoft Works uses.doc, Excel uses.xls and Power']}\n"
+      "{'model_output_summary': ['the process of creating new roots causes stress to the cut stem. remove any dried or ']}\n"
      ]
     },
     {
@@ -427,8 +427,8 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8502\n",
-      "  Network URL: http://192.168.6.92:8502\n",
+      "  Local URL: http://localhost:8501\n",
+      "  Network URL: http://192.168.6.92:8501\n",
       "\n",
       "  For better performance, install the Watchdog module:\n",
       "\n",
@@ -568,7 +568,6 @@
     "        \"is_embedding\": True,\n",
     "        'reference_dataset': \"ref_dataset.json\",\n",
     "        \"initial_skip\": 50,\n",
-    "        'num_buckets': 20,\n",
     "        \"emd_threshold\": 2\n",
     "    }],\n",
     "    \"st_logging\": True,\n",
@@ -595,22 +594,16 @@
     {
      "data": {
       "text/plain": [
-       "['\"real pearls have a maze-like, scaled pattern. the surface of\"',\n",
-       " '\"add the bay leaf, peas and corn and paprika. add the\"',\n",
-       " '\"a lot of artist clutter comes from a desire to keep track of supplies visually.\"',\n",
-       " '\"graham cracker crumbs are a mixture of 113 g of room temperature\"',\n",
-       " '\"shampoos remove oil from your hair, but use it every day. if you have\"',\n",
-       " '\"fabric flowers have more than one layer, and there\\'s no need for every layer to be\"',\n",
-       " '\"rewrite sentences to replace verbs that are more vivid. if you\\'re\"',\n",
-       " '\"a small knife cut the stem from the tomatoes by cutting an angled hole around the stem\"',\n",
-       " '\"you can always use the \\\\\"Flatten\\\\\" feature to combine all of the layers in\"',\n",
-       " '\"bandeau tops emphasize your lack of upper curves, but make your body look more boy\"',\n",
-       " '\"underground is the most versatile place to build your farm. underground is the most versatile place to\"',\n",
-       " '\",,,,,,,,,,,,,,,,,,,\"',\n",
-       " '\"a 9 x 13 inch baking dish is 9 x 13 inches thick. cook\"',\n",
-       " '\"basil leaves have the most oil just before the plant flowers., cut the individual leaves\"',\n",
-       " '\"Wordperfect will ask you to create your own line spacing value. a 2.0 value will\"',\n",
-       " '\"if you do not have a right mouse button, right-click on a tab\"']"
+       "['\"pack is a great way to get out of the beaten path. hike up some\"',\n",
+       " '\"a good pressure on your opponent will be achieved by pushing him/her down on the \"',\n",
+       " '\"if you have a large staff, you can also consider meeting with your heads.\"',\n",
+       " '\"a long-haired dog may need to be brushed daily, while a\"',\n",
+       " '\"horses respond positively to massages like the so-called \\\\\"T-Touch\\\\\" \"',\n",
+       " '\"a lined notebook will work best since you won\\'t have sloped sentences.\"',\n",
+       " '\"Snapchat has pushed out new Lenses regularly. you can use them with your forward\"',\n",
+       " '\"make your own Christmas decorations yourself. make your own decorations for a special touch.\"',\n",
+       " '\"painter\\\\u2019s tape to create designs and then spray paint to achieve the desired look.\"',\n",
+       " '\"flipping real estate requires that you buy the property first and then pay your own way to renovat\"']"
       ]
      },
      "execution_count": 12,
@@ -780,34 +773,28 @@
     {
      "data": {
       "text/plain": [
-       "(['\",,,,,,,,,,\"',\n",
+       "(['\",,,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\",,, I\\'ll walk you in\\\\\".,,,\"',\n",
+       "  '\",,,,,,,,,,,,,,,,,\"',\n",
+       "  '\"buy a Casteliacone for 100.,,,,,,,\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"',\n",
        "  '\",,,,,,,,,,\"',\n",
        "  '\",,,,,,,,,,\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,, \"',\n",
-       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,, \"',\n",
-       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,, cook pasta according to the instructions on the package. separate water\"',\n",
-       "  '\",,,,,,,,,, \"'],\n",
-       " ['\"summarize: ;\\\\n,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,\"',\n",
+       "  '\",,,, choose the one that you think is the most reliable.\"',\n",
+       "  '\",,,,,,,,,,,,,,,,,,\"'],\n",
+       " ['\"summarize: ,,,,,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,, All they do is spoil it for everyone!\\\\n\\\\n,,,\\\\n\\\\n, I\\'ll walk you in.\\\\\"\\\\n\\\\n, (REMEMBER UGLY COSTUME SCARY!)\\\\n\\\\n,,, JUST DON\\'T GIGGLE!\\\\n\\\\n,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,, This will wash away excess oils (sebum) and dirt your skin has collected whilst sleeping and during the day.\\\\n\\\\n, The grease your hair produces is very likely to get on your face and clog the pores, so wash it before it gets oily.\\\\n\\\\n, Bacteria can be transferred onto your face\\\\n\\\\n\\\\nTherefore avoid touching your face at all costs\\\\n\\\\n, Bacteria can hang around in them.\\\\n\\\\n,,,,,,\\\\n\\\\nThis means cutting out sugary, greasy, fatty, salty and highly processed foods like take out and frozen meals.\\\\nAntioxidant rich foods are your best friend if you have problematic skin as they are a natural cleanser for your body and skin like water.\\\\n\\\\n,, They are too harsh for your easily aggravated skin.\\\\n\\\\n,,, People with oily skin think that it is unnecessary but they couldn\\\\u2019t be more wrong. If you are cleansing daily, which you should, your skin has to keep up with your cleanser and reproduce natural oils (sebum). If you don\\\\u2019t moisturise it could overproduce these oils and clog your pores leaving it oily. But your moisturiser should be oil free to avoid clogging your pores further.\\\\n\\\\n, Try mineral make-up.\\\\n\\\\n, Your skin will feel congested and all that make up can clog your pores causing pimples. So give your skin a break every now and then.\\\\n\\\\n, If you don\\\\u2019t like the taste of green tea there are green tea supplements on the market.\\\\n\\\\n, A lot of cleansers use this mineral. Also, zinc supplements most likely will improve your complexion.\\\\n\\\\n,, If none of these things work for you, visit your GP. They might recommend you to a prescribed medication or take you to a dermatologist.\\\\n\\\\n\"',\n",
+       "  '\"summarize: ,, Buy a Casteliacone for 100.,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,\"',\n",
+       "  '\"summarize: ,,,\"',\n",
        "  '\"summarize: ,,,,\"',\n",
-       "  '\"summarize: ,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,\"',\n",
-       "  '\"summarize: ,,,,,,,,,\"',\n",
        "  '\"summarize: ,,,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,, Serve.\\\\n\\\\n,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,\"',\n",
-       "  '\"summarize: \\\\n\\\\n\\\\n\\\\n ;\\\\n,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,, Now you have done a boardslide.\\\\n\\\\n,\"',\n",
-       "  '\"summarize: ;\\\\n,,, Cook pasta according to the instructions on the package. Separate water from the farfalle pasta when done cooking to stop it from cooking any further. Put aside to cool.\\\\n\\\\n,, Put the chopped garlic in until the garlic is golden brown in color.\\\\n\\\\n, The toasted flavor of the garlic will be absorbed by the tuna fish. Fry for about 2 minutes until the water of the tuna is mostly evaporated.\\\\n\\\\n,, Sprinkle a handful of coriander on top of the salad when served.\\\\n\\\\n,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,\"'])"
+       "  '\"summarize: ;\\\\n,,, Choose the one that you think is the most reliable.\\\\n\\\\n,,, This is your guide page.\\\\n\\\\n,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,,,\"'])"
       ]
      },
      "execution_count": 14,
@@ -818,7 +805,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Stopping...\n"
+      "  Stopping...\n",
+      "\n",
+      "  You can now view your Streamlit app in your browser.\n",
+      "\n",
+      "  Local URL: http://localhost:8501\n",
+      "  Network URL: http://192.168.6.92:8501\n",
+      "\n",
+      "  For better performance, install the Watchdog module:\n",
+      "\n",
+      "  $ xcode-select --install\n",
+      "  $ pip install watchdog\n",
+      "            \n"
      ]
     }
    ],
