Download wikihow from s3

--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -187,13 +187,20 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wikihowAll.csv already present\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-5b0f6db04b5599d3\n",
-      "Found cached dataset csv (/Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-5b0f6db04b5599d3/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 22.00it/s]\n",
-      "Loading cached processed dataset at /Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-5b0f6db04b5599d3/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317/cache-b11015b26ad529da.arrow\n"
+      "Using custom data configuration default-74664f2ff2d24c20\n",
+      "Found cached dataset csv (/Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-74664f2ff2d24c20/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 24.35it/s]\n",
+      "Loading cached processed dataset at /Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-74664f2ff2d24c20/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317/cache-841d74d37d757b40.arrow\n"
      ]
     },
     {
@@ -217,6 +224,7 @@
     }
    ],
    "source": [
+    "download_wikihow_csv_file()\n",
     "wikihow_dataset = load_dataset(\"csv\", data_files='wikihowAll.csv').filter(lambda x: x['text'] is not None)\n",
     "wikihow_dataset = wikihow_dataset.rename_column(\"headline\", \"summary\")\n",
     "wikihow = wikihow_dataset['train'].train_test_split(test_size=453)\n",
@@ -243,7 +251,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Flattening the indices: 100%|█████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 56.83ba/s]\n"
+      "Flattening the indices: 100%|█████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 57.52ba/s]\n"
      ]
     },
     {
@@ -285,23 +293,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 117.55ba/s]"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 97.35ba/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'model_input_text_to_summarize': \" Because the process of creating new roots causes stress to the cut stem, the existing foliage may rot or dry out. Remove any dried or rotten leaves, and remove any flowers that may form during the rooting process.\\n\\n, Keep the rooting medium moist at all times. Hand-mist the cuttings several times an hour for the first several days. If you can't hand-mist regularly, create a humid atmosphere around the cuttings with a plastic tent, such as a food storage bag. Be sure the tent does not touch the leaves or they may rot. Commercial propagation boxes also are available at most garden centers.\\n\\n, Keep the soil temperatures between 65 and 80 degrees F (18.3 and 26.7 degrees C).\\n\\n, The process of regeneration requires light for photosynthesis. However, direct sunlight will burn the fragile cuttings. Place the cuttings in a north-facing window or provide artificial lighting.\\n\\n\"} \n",
+      "{'model_input_text_to_summarize': \";\\n, Two are on the lantern, one is on the floor. One is on the money holder, figure out some more!\\n\\n, You're not the only one who can slip on that puddle.\\n\\n, Here is another rhyme to help you: Sir Rebral throws rocks at you. Do it to him. He hits you up with the ground. Sling the boulder on the top shelf.\\n\\n, Go to the sewer. Keep turning the pipes until you're close to the platform for the second time.\\n\\n, Jump to the top, but never, ever stop. Turn the wheel, avoid the flies. Jump to Ratman, arrest the crime.\\n\\n, Jump on the fence and jump on the car. Go to the magnet on top of the yellow thing, turn it, BOOM he turns into a bar. He'll pick it up and toss it at you. Use the magnet again. Use the car bar, too.\\n\\n, You can fly now. Go to the hotel and jump up.\\n\\n, Avoid the beams. Arrest her. Foil her schemes.\\n\\n\"} \n",
       "\n",
-      "{'model_output_summary': ['the process of creating new roots causes stress to the cut stem. remove any dried or ']}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "{'model_output_summary': ['Sir Rebral throws rocks at you, sling the boulder on the top shelf ']}\n"
      ]
     }
    ],
@@ -594,16 +595,25 @@
     {
      "data": {
       "text/plain": [
-       "['\"pack is a great way to get out of the beaten path. hike up some\"',\n",
-       " '\"a good pressure on your opponent will be achieved by pushing him/her down on the \"',\n",
-       " '\"if you have a large staff, you can also consider meeting with your heads.\"',\n",
-       " '\"a long-haired dog may need to be brushed daily, while a\"',\n",
-       " '\"horses respond positively to massages like the so-called \\\\\"T-Touch\\\\\" \"',\n",
-       " '\"a lined notebook will work best since you won\\'t have sloped sentences.\"',\n",
-       " '\"Snapchat has pushed out new Lenses regularly. you can use them with your forward\"',\n",
-       " '\"make your own Christmas decorations yourself. make your own decorations for a special touch.\"',\n",
-       " '\"painter\\\\u2019s tape to create designs and then spray paint to achieve the desired look.\"',\n",
-       " '\"flipping real estate requires that you buy the property first and then pay your own way to renovat\"']"
+       "['\"reels are designed to hang down from the rod, not rest above it like spincasting\"',\n",
+       " '\"you will need a pair of circular needles that measure at least 32\\\\\". check\"',\n",
+       " '\"draw a circle in the middle of the kidney bean (the circle is the nose). add\"',\n",
+       " '\"you can always add more images later. you can switch between photos and other albums by tapping\"',\n",
+       " '\",,,,,,,,,,,,,,,,,,,\"',\n",
+       " '\"if you\\'re hurt, let out those tears, let out those tears, cry,\"',\n",
+       " '\"a good relationship is built on communication, openness, honesty. a good relationship\"',\n",
+       " '\"if your cough is caused by a bacterial infection, your doctor may prescribe antibiotics\"',\n",
+       " '\"\\\\\"Taps\\\\\" is played on virtually any instrument. the sheet music above uses\"',\n",
+       " '\"the fingerless wolf whistle is achieved through lip and tongue placement. pull your bottom lip\"',\n",
+       " '\"rhubarb is edible, but leaves themselves are toxic. add 1 teaspoon of\"',\n",
+       " '\"a neigh is a very long sound that is the combination of a \"',\n",
+       " '\"you can find this email in the email account associated with your Netflix account. if you\"',\n",
+       " '\"you can clip or pinch the leaves away from the stems. use a salad spin\"',\n",
+       " '\"don\\'t let the desire to do something perfectly stop you from doing the thing. don\"',\n",
+       " '\"Wiener dogs love to please.be patient and firm as you train your wiener dog to\"',\n",
+       " '\"you can be creative with your supplies, depending on what you have at home. scrap,\"',\n",
+       " '\"scallops cook very quickly, so you do not want to defrost them under hot\"',\n",
+       " '\"the intersecting Chords Theorem is a resemblance\"']"
       ]
      },
      "execution_count": 12,
@@ -773,28 +783,24 @@
     {
      "data": {
       "text/plain": [
-       "(['\",,,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,, I\\'ll walk you in\\\\\".,,,\"',\n",
-       "  '\",,,,,,,,,,,,,,,,,\"',\n",
-       "  '\"buy a Casteliacone for 100.,,,,,,,\"',\n",
+       "(['\",,,,,,,,,,,,,,,,,,\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"',\n",
        "  '\",,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,\"',\n",
+       "  '\",,,,,,,,,,,,,,,,,,,\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,, choose the one that you think is the most reliable.\"',\n",
+       "  '\",,,,,,,,,, \"',\n",
+       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\",,,, your partner can help you up.\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"'],\n",
-       " ['\"summarize: ,,,,,,,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,, All they do is spoil it for everyone!\\\\n\\\\n,,,\\\\n\\\\n, I\\'ll walk you in.\\\\\"\\\\n\\\\n, (REMEMBER UGLY COSTUME SCARY!)\\\\n\\\\n,,, JUST DON\\'T GIGGLE!\\\\n\\\\n,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,, This will wash away excess oils (sebum) and dirt your skin has collected whilst sleeping and during the day.\\\\n\\\\n, The grease your hair produces is very likely to get on your face and clog the pores, so wash it before it gets oily.\\\\n\\\\n, Bacteria can be transferred onto your face\\\\n\\\\n\\\\nTherefore avoid touching your face at all costs\\\\n\\\\n, Bacteria can hang around in them.\\\\n\\\\n,,,,,,\\\\n\\\\nThis means cutting out sugary, greasy, fatty, salty and highly processed foods like take out and frozen meals.\\\\nAntioxidant rich foods are your best friend if you have problematic skin as they are a natural cleanser for your body and skin like water.\\\\n\\\\n,, They are too harsh for your easily aggravated skin.\\\\n\\\\n,,, People with oily skin think that it is unnecessary but they couldn\\\\u2019t be more wrong. If you are cleansing daily, which you should, your skin has to keep up with your cleanser and reproduce natural oils (sebum). If you don\\\\u2019t moisturise it could overproduce these oils and clog your pores leaving it oily. But your moisturiser should be oil free to avoid clogging your pores further.\\\\n\\\\n, Try mineral make-up.\\\\n\\\\n, Your skin will feel congested and all that make up can clog your pores causing pimples. So give your skin a break every now and then.\\\\n\\\\n, If you don\\\\u2019t like the taste of green tea there are green tea supplements on the market.\\\\n\\\\n, A lot of cleansers use this mineral. Also, zinc supplements most likely will improve your complexion.\\\\n\\\\n,, If none of these things work for you, visit your GP. They might recommend you to a prescribed medication or take you to a dermatologist.\\\\n\\\\n\"',\n",
-       "  '\"summarize: ,, Buy a Casteliacone for 100.,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,,\"',\n",
+       " ['\"summarize: \\\\n\\\\n\\\\n\\\\n;\\\\n, Mix thoroughly.\\\\n\\\\n\\\\n\\\\n\\\\n\\\\n,, Continue stirring.\\\\n\\\\n\\\\n\\\\n\\\\n\\\\n,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,,,,\"',\n",
        "  '\"summarize: ,,,\"',\n",
-       "  '\"summarize: ,,,,\"',\n",
-       "  '\"summarize: ,,,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,, Choose the one that you think is the most reliable.\\\\n\\\\n,,, This is your guide page.\\\\n\\\\n,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,,,,\"'])"
+       "  '\"summarize: ;\\\\n,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,,,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,,,,,,,(click the frames to change frame your editing).\\\\n\\\\n,,,,\\\\\".\\\\n\\\\n,,\"',\n",
+       "  '\"summarize: ,,, Your partner can help you up.\\\\n\\\\n\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,,,,,!\\\\n\\\\n\"'])"
       ]
      },
      "execution_count": 14,
